--- a/04-rest-security-oidc/persons-microservice/src/main/resources/application.properties
+++ b/04-rest-security-oidc/persons-microservice/src/main/resources/application.properties
@@ -5,5 +5,15 @@ quarkus.oidc.client-id=persons-example-backend-client
 quarkus.oidc.application-type=service
 quarkus.http.cors=true
 
+#OIDC
+app.keycloak.url=http://localhost:9900
+app.keycloak.realm=persons-example-realm
+quarkus.oidc.auth-server-url=${app.keycloak.url}/auth/realms/${app.keycloak.realm}
+quarkus.oidc.client-id=persons-example-backend-client
 
+keycloak-token/mp-rest/url=${quarkus.oidc.auth-server-url}
+
+org.eclipse.microprofile.rest.client.propagateHeaders=Authorization
+#openapi
 quarkus.smallrye-openapi.security-scheme=jwt
+
