--- a/05-orchestration-saga/bank/src/main/resources/application.properties
+++ b/05-orchestration-saga/bank/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.http.port=8099
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = azerty
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/payment_db
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/bank_db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
