--- a/05-orchestration-saga/bank/src/main/resources/application.properties
+++ b/05-orchestration-saga/bank/src/main/resources/application.properties
@@ -8,3 +8,6 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/bank_db
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
+
+app.bank.latency-ms=0
+app.bank.failure-probability=0
