--- a/05-orchestration-saga/barista/src/main/resources/application.properties
+++ b/05-orchestration-saga/barista/src/main/resources/application.properties
@@ -6,5 +6,5 @@ quarkus.datasource.password = azerty
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/barista_db
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
