test nominal ok

--- a/05-orchestration-saga/OrdersOrchestrator/src/main/resources/application.properties
+++ b/05-orchestration-saga/OrdersOrchestrator/src/main/resources/application.properties
@@ -7,11 +7,12 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5434/orders_db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 
 #rest client for the banking service
-enit.rhaddad.service.PaymentService/mp-rest/url=https://localhost:8099/payment
-enit.rhaddad.service.PaymentService/mp-rest/scope=javax.inject.Singleton
+quarkus.rest-client.payment-api.url=http://localhost:8099
+quarkus.rest-client.payment-api.scope=javax.inject.Singleton
 
-enit.rhaddad.service.BaristaService/mp-rest/url=https://localhost:8081/barista
-enit.rhaddad.service.BaristaService/mp-rest/scope=javax.inject.Singleton
+quarkus.rest-client.barista-api.url=http://localhost:8081
+quarkus.rest-client.barista-api.scope=javax.inject.Singleton
+quarkus.http.access-log.enabled=true
