--- a/05-orchestration-saga/barista/src/main/resources/application.properties
+++ b/05-orchestration-saga/barista/src/main/resources/application.properties
@@ -7,4 +7,6 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/barista_db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
+
+quarkus.http.access-log.enabled=true
