Exemple complet et tol&érance aux pannes testée

--- a/05-orchestration-saga/OrdersOrchestrator/src/main/resources/application.properties
+++ b/05-orchestration-saga/OrdersOrchestrator/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.password = azerty
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5434/orders_db
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=create
 quarkus.hibernate-orm.log.sql=false
 
 #rest client for the banking service
@@ -16,3 +16,7 @@ quarkus.rest-client.payment-api.scope=javax.inject.Singleton
 quarkus.rest-client.barista-api.url=http://localhost:8081
 quarkus.rest-client.barista-api.scope=javax.inject.Singleton
 quarkus.http.access-log.enabled=true
+
+quarkus.rest-client.logging.scope=request-response
+quarkus.rest-client.logging.body-limit=1024
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
