barista inbox ok

--- a/06-choreography/barista/src/main/resources/application.properties
+++ b/06-choreography/barista/src/main/resources/application.properties
@@ -9,4 +9,13 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/barista_db
 quarkus.hibernate-orm.database.generation=create
 quarkus.hibernate-orm.log.sql=false
 
+
+#messaging
+kafka.bootstrap.servers=localhost:9092
+mp.messaging.incoming.placed-orders.connector=smallrye-kafka
+mp.messaging.incoming.placed-orders.topic=placed-orders
+
+
+#logging
+
 quarkus.http.access-log.enabled=true
