--- a/06-choreography/ordersPlacement/src/main/resources/application.properties
+++ b/06-choreography/ordersPlacement/src/main/resources/application.properties
@@ -11,8 +11,8 @@ quarkus.hibernate-orm.log.sql=false
 
 #messaging
 kafka.bootstrap.servers=localhost:9092
-mp.messaging.outgoing.orders.connector=smallrye-kafka
-mp.messaging.outgoing.orders.topic=orders
+mp.messaging.outgoing.placed-orders.connector=smallrye-kafka
+mp.messaging.outgoing.placed-orders.topic=placed-orders
 
 #logging
 quarkus.http.access-log.enabled=true
